# shift-tasks

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.backend.test  Dockerfile.postgres  README.md  config.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pyci.yml
deploy/: docker-compose.test.yml  docker-compose.yml
src/: base_service.py  containers.py  server.py
src/adapters/: database.py
src/db_models/: products.py  tasks.py
src/modules/: exceptions.py
src/modules/tasks/: controllers.py  repository.py  schemas.py  service.py
tests/: conftest.py
tests/modules/tasks/: conftest.py  test_task_repository.py  test_tasks_endpoints.py
tests/plugins/: containers.py  database.py  factories.py
